--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.5
+  web_socket_channel: ^2.2.0
 
 dev_dependencies:
   flutter_test:
